--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 <body>
 <h1>My soccer website</h1>
 <h2>Story's</h2>
+<hr>
+<b>Links to my story's</b>
+<hr>
+<a href="My First goal.html">My First goal</a>
+<hr>
+<a href="My First win.html">My First Win</a>
+<hr>
+<a href="My championship game.html">My</a>
 </body>
 </html>
