--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
   <title>My Soccer Website</title>
 </head>
 <body>
-<h1>My soccer website</h1>
-<h2>Story's</h2>
+<h1 style="color: darkorchid;">My soccer website</h1>
+<h2 style="color:blueviolet">Story's</h2>
 <hr>
-<b>Links to my story's</b>
-<hr>
-<a href="My First goal.html">My First goal</a>
-<hr>
-<a href="My First win.html">My First Win</a>
-<hr>
-<a href="My championship game.html">My</a>
+<b style="color: blueviolet;">Links to my story's</b>
+<a href="MyFirstgoal.html">My First goal</a>
+<a href="MyFirstwin.html">My First Win</a>
+<a href="Mychampionshipgame.html">My championship Game</a>
+<a href="MyFavoriteSoccerPlayer.html">My Favorite Soccer Player</a>
+
 </body>
 </html>
